--- a/src/index.html
+++ b/src/index.html
@@ -46,12 +46,12 @@
         </div>
         <div id="exp-table">
             <div class="tabs">
-                <ul>
+                <ul id="tab-options">
                     <li>
-                        <button class="tablinks tablink-btn" onclick="tabSelect(event, 'job1')">Softtek</button>
+                        <button class="tablinks tablink-btn " onclick="tabSelect(event, 'job1')">Softtek</button>
 
                     </li>
-                    <li> <button class="tablinks tablink-btn" onclick="tabSelect(event, 'job2')">Bosch</button>
+                    <li> <button class="tablinks tablink-btn " onclick="tabSelect(event, 'job2')">Bosch</button>
                     </li>
                     <li> <button class="tablinks tablink-btn" onclick="tabSelect(event, 'job3')">4Geeks</button>
                     </li>
