first version completed

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Hello Webpack</title>
+    <title>Audie Artavia</title>
 </head>
 
 <body>
@@ -22,21 +22,21 @@
         <div class="menu-container">
             <div class="menu">
                 <div class="menu-opt">
-                    <span>Work Experience</span>
+                    <span><a href="#experience-section">Work Experience</a></span>
                 </div>
                 <div class="menu-opt">
-                    <span> My Skills</span>
+                    <span> <a href="#skills-section">My Skills</a></span>
                 </div>
                 <div class="menu-opt">
-                    <span>Things I've Built</span>
+                    <span><a href="#projects-section">Things I've built</a></span>
                 </div>
                 <div class="menu-opt">
-                    <span>Contact Me</span>
+                    <a href="mailto:audie.artavia@gmail.com">Contact Me</a>
                 </div>
             </div>
         </div>
     </section>
-    <section>
+    <section id="experience-section">
         <div class="section-header">
             <h1>Work Experience</h1>
             <h4>
@@ -51,7 +51,7 @@
             <div id="exp-tabs-container"></div>
         </div>
     </section>
-    <section>
+    <section id="skills-section">
         <div class="section-header">
             <h1>My Skills</h1>
             <h4> Having the opportunity to work on differente proyects helped me get familiar with multiple technologies
@@ -78,7 +78,7 @@
 
         </div>
     </section>
-    <section>
+    <!-- <section>
         <div class="section-header">
             <h1>Contact Me!</h1>
             <h4>
@@ -87,8 +87,30 @@
                 minima!
             </h4>
         </div>
+        <div id="contact-content">
+            <div id="form-container">
+                <div id="contact-img">
+                    <img src="" alt="">
+                    
+                </div>
+                <div id="form">
+                    <div class="field">
+                        <label for="email">Your email</label>
+                        <input type="email" name="email" id="email">
+                    </div>
+                    <div class="field">
+                        <label for="message">Say Hi!</label>
+                        <textarea type="text" cols="33" rows="5" name="msg" id="msg"></textarea>
+                    </div>
+                    <div>
+                        <button id="send-msg">Send</button>
 
-    </section>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section> -->
 
 </body>
 
