--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,6 @@
                 <h3 id="about">I’ m a software developer. I need help with this text <br> but I do have some experience
                     doing things <br> like web sites and stuff, and they work!
             </div>
-            <img id="fox-img" alt="">
         </div>
         <div class="menu-container">
             <div class="menu">
@@ -52,9 +51,9 @@
         </div>
     </section>
     <section id="skills-section">
-        <div class="section-header">
-            <h1>My Skills</h1>
-            <h4> Having the opportunity to work on differente proyects helped me get familiar with multiple technologies
+        <div class="section-header right">
+            <h1 style="text-align: right;">My Skills</h1>
+            <h4 style="text-align: right;"> Having the opportunity to work on differente proyects helped me get familiar with multiple technologies
                 and the process of investigating, learning and applying them.</h4>
         </div>
         <div id="skills-container">
@@ -65,9 +64,7 @@
         <div class="section-header">
             <h1>Things I've Built</h1>
             <h4>
-                Recusandae, soluta numquam, itaque hic, sequi nam aliquam nulla delectus culpa unde magnam ad deserunt
-                quibusdam debitis mollitia necessitatibus fugit autem quisquam eaque? Quasi corporis itaque accusamus
-                quidem perferendis quas!
+               Here's a brief description of the most relevant projects i have worked on.
             </h4>
         </div>
         <div id="pr-tabs">
