--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,19 @@
 
     </div>
 
+<div class="container">
+    
     <section id="main-section">
         <div id="card-container">
             <div class="name-card">
                 <h1 id="greeting">Hey, I'm Audie.</h1>
                 <h3 id="about">I’ m a software developer. I need help with this text <br> but I do have some experience
                     doing things <br> like web sites and stuff, and they work!
+            </div>
+            <div class="profile">
+               <div id="profile-photo">
+                <img src="" alt="">
+               </div>
             </div>
         </div>
         <div class="menu-container">
@@ -52,8 +59,8 @@
     </section>
     <section id="skills-section">
         <div class="section-header right">
-            <h1 style="text-align: right;">My Skills</h1>
-            <h4 style="text-align: right;"> Having the opportunity to work on differente proyects helped me get familiar with multiple technologies
+            <h1>My Skills</h1>
+            <h4> Having the opportunity to work on differente proyects helped me get familiar with multiple technologies
                 and the process of investigating, learning and applying them.</h4>
         </div>
         <div id="skills-container">
@@ -75,40 +82,18 @@
 
         </div>
     </section>
-    <!-- <section>
-        <div class="section-header">
-            <h1>Contact Me!</h1>
-            <h4>
-                Qui officiis vitae id et quibusdam nemo modi omnis labore earum molestias expedita non fugiat sapiente,
-                similique facere laudantium alias suscipit. Quisquam obcaecati officia amet tempore sequi quis ab
-                minima!
-            </h4>
+</div>
+  
+    <div id="fixed-menu">
+       <div id="cap-icon"><a href=""><img src="" alt=""></a></div>
+        <div id="opt-links">
+            <div id="github-icon"  ><a href="https://github.com/audieartb" target="_blank"><img class="icon" src="" alt=""></a></div>
+        <div id="linkedin-icon"  ><a href="https://www.linkedin.com/in/audie-artavia/" target="_blank"><img class="icon" src="" alt=""></a></div>
+        <div id="mail-icon"  ><a href="mailto:aj.artavia19@gmail.com" target="_blank"><img  class="icon" src="" alt=""></a></div>
+        <div id="top-icon"  ><a href=""><img  class="icon" src="" alt=""></a></div>
+
         </div>
-        <div id="contact-content">
-            <div id="form-container">
-                <div id="contact-img">
-                    <img src="" alt="">
-                    
-                </div>
-                <div id="form">
-                    <div class="field">
-                        <label for="email">Your email</label>
-                        <input type="email" name="email" id="email">
-                    </div>
-                    <div class="field">
-                        <label for="message">Say Hi!</label>
-                        <textarea type="text" cols="33" rows="5" name="msg" id="msg"></textarea>
-                    </div>
-                    <div>
-                        <button id="send-msg">Send</button>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-
-    </section> -->
-
+    </div>
 </body>
 
 </html>
