--- a/src/index.html
+++ b/src/index.html
@@ -19,11 +19,11 @@
                 <h3 id="about">I’ m a software developer. I need help with this text <br> but I do have some experience
                     doing things <br> like web sites and stuff, and they work!
             </div>
-            <div class="profile">
+            <!-- <div class="profile">
                <div id="profile-photo">
                 <img src="" alt="">
                </div>
-            </div>
+            </div> -->
         </div>
         <div class="menu-container">
             <div class="menu">
@@ -88,10 +88,9 @@
        <div id="cap-icon"><a href=""><img src="" alt=""></a></div>
         <div id="opt-links">
             <div id="github-icon"  ><a href="https://github.com/audieartb" target="_blank"><img class="icon" src="" alt=""></a></div>
-        <div id="linkedin-icon"  ><a href="https://www.linkedin.com/in/audie-artavia/" target="_blank"><img class="icon" src="" alt=""></a></div>
-        <div id="mail-icon"  ><a href="mailto:aj.artavia19@gmail.com" target="_blank"><img  class="icon" src="" alt=""></a></div>
-        <div id="top-icon"  ><a href=""><img  class="icon" src="" alt=""></a></div>
-
+            <div id="linkedin-icon"  ><a href="https://www.linkedin.com/in/audie-artavia/" target="_blank"><img class="icon" src="" alt=""></a></div>
+            <div id="mail-icon"  ><a href="mailto:aj.artavia19@gmail.com" target="_blank"><img  class="icon" src="" alt=""></a></div>
+            <div id="top-icon"  ><a href=""><img  class="icon" src="" alt=""></a></div>
         </div>
     </div>
 </body>
