modified index text

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
         <div id="card-container">
             <div class="name-card">
                 <h1 id="greeting">Hey, I'm Audie.</h1>
-                <h3 id="about">I’ m a software developer. I need help with this text <br> but I do have some experience
-                    doing things <br> like web sites and stuff, and they work!
+                <h3 id="about">I'm a software developer and here I like to add some of the work I've done for fun and professionally.
             </div>
             <!-- <div class="profile">
                <div id="profile-photo">
