--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div id="card-container">
             <div class="name-card">
                 <h1 id="greeting">Hey, I'm Audie.</h1>
-                <h3 id="about">I'm a software developer and here I like to add some of the work I've done for fun and professionally.
+                <h3 id="about">I'm a software developer and here are some of the work I've done for fun and professionally.
             </div>
             <!-- <div class="profile">
                <div id="profile-photo">
